# ESP_Drone

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old
RemoteControl/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
RemoteControl/components/Data_declaration/: CMakeLists.txt  Data_declaration.c
RemoteControl/components/External_communication/: CMakeLists.txt
RemoteControl/components/LED/: CMakeLists.txt  LED.c
RemoteControl/components/RC_control_signal/: CMakeLists.txt  RC_control_signal.c
RemoteControl/main/: CMakeLists.txt  main.c
components/Data_declaration/: CMakeLists.txt  Data_declaration.c
components/External_communication/: CMakeLists.txt
components/External_communication/UDP_TCP/: UDP_TCP.c
components/External_communication/UDP_TCP/include/: UDP_TCP.h
components/External_communication/WIFI/: WIFI.c
components/External_communication/WIFI/include/: WIFI.h
components/External_communication/anotc_client_v4.34/: anotc.c
components/External_communication/anotc_client_v4.34/include/: anotc.h
components/External_communication/mqtt_lot/: mqtt_lot.c
components/External_communication/mqtt_lot/include/: mqtt_lot.h
components/External_communication/remote_control/: remote_control.c
components/External_communication/remote_control/include/: remote_control.h
components/LED/: CMakeLists.txt  LED.c
components/VBAT/: CMakeLists.txt  VBAT.c
components/flight_control/: CMakeLists.txt
components/inside_communication/: CMakeLists.txt
components/sensor/: CMakeLists.txt
main/: CMakeLists.txt  main.c
(+43 files in other folders)
